2002-06-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTimer.m: Retain target and user info on initialisation
	Release them on invalidation.  Ensure timer is invalidated on
	deallocation. Documented timer methods.
	Changes based on bug report by Andy Ruder <aeruder@yahoo.com>

2002-06-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFTPURLHandle.m: simple implementation added
	* Source/NSURLHandle.m: Register GSFTPURLHandle for ftp scheme.
	* Source/GSHTTPURLHandle.m: modified so that data being read is
	reported periodically during the read proces rather than just at end.

2002-06-15  Adam Fedor  <fedor@gnu.org>

	* Source/NSProcessInfo.m: Include sys/fcntl for Solaris.

2002-06-14  Richard Frith-Macdonald <rfm@gnu.org>

	* config/pathxml.m4: Adjust path to headers.
	* Tools/gsdoc.m: Adjust path to headers.  Add warning about
	deprecation.
	Patch by e.sammer <eric@linuxstep.org>
	* Source/NSObject.m: Added some compatibility methods in a
	categpory of Object.
	* Source/Additions/GSMime.m: Add a couple of convenience methods.
	* Source/GSHTTPURLHandle.m: Use one of them.
	* SSL/Makefile.postample: on distclean, don't need to delete
	bundle, but do delete config.h explicitly.

2002-06-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSXML.m: Include NSInvocation.h to avoid
	compiler warning.

2002-06-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: Fix a few errors which crept in to the map
	table based reference counting.
	* Examples/GNUmakefile: Permit local makefile to be missing.
	* Source/UnixFileHandle.m: Added outgoing SOCKS5 support.
	* Source/NSFileHandle.m: Added SOCKS5 documentation.
	* Source/Base/gsdoc: Dopcumented SOCKS enironemnet variables and defs.
	* Source/NSNotification.m: Made -description more informative.
	* Testing/call.m: Trivial test program for tcp connections.
	* SSL/GSUnixSSLHandle.m: Updated for socks.
	* Additions/GSMime.m: Utilites to encode/decode base64